// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsx-comment.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
\`\`\`jsx
const Foo = () => {
  return (
    <div>
      {/*
        This links to a page that does not yet exist.
      */}    
      <hr />
    </div>
  );
};
\`\`\`

=====================================output=====================================
\`\`\`jsx
const Foo = () => {
  return (
    <div>
      {/*
        This links to a page that does not yet exist.
      */}
      <hr />
    </div>
  );
};
\`\`\`

================================================================================
`;

exports[`markdown-preview-enhanced.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
## plain js block

\`\`\`js   
console.log(     "hello world"   );
\`\`\`

## js block with arguments

\`\`\`js {cmd=node .line-numbers}
console.log(     "hello world"   );
\`\`\`

## js block with arguments and no space

\`\`\`js{cmd=node .line-numbers}
console.log(     "hello world"   );
\`\`\`

=====================================output=====================================
## plain js block

\`\`\`js
console.log("hello world");
\`\`\`

## js block with arguments

\`\`\`js {cmd=node .line-numbers}
console.log("hello world");
\`\`\`

## js block with arguments and no space

\`\`\`js{cmd=node .line-numbers}
console.log("hello world");
\`\`\`

================================================================================
`;

exports[`trailing-comma.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
### Some heading

\`\`\`js
someFunctionCall(
  foo,
  bar,
  foobar,
  sometehingReallyLongAndHairy,
  somethingElse,
  breakNow,
);
\`\`\`

=====================================output=====================================
### Some heading

\`\`\`js
someFunctionCall(
  foo,
  bar,
  foobar,
  sometehingReallyLongAndHairy,
  somethingElse,
  breakNow,
);
\`\`\`

================================================================================
`;
